--- a/mobile/aha/package.json
+++ b/mobile/aha/package.json
@@ -12,14 +12,22 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
+    "crypto": "^1.0.1",
     "jsbn": "^1.1.0",
     "mobx": "^6.10.0",
     "mobx-react-lite": "^4.0.3",
+    "node-forge": "^1.3.1",
     "react": "18.2.0",
+    "react-icons": "^4.11.0",
     "react-native": "0.72.3",
+    "react-native-get-random-values": "^1.9.0",
+    "react-native-image-picker": "^7.0.2",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
-    "socket.io-client": "^4.7.2"
+    "react-native-vector-icons": "^10.0.1",
+    "socket.io-client": "4.5.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -29,8 +37,11 @@
     "@react-native/metro-config": "^0.72.9",
     "@tsconfig/react-native": "^3.0.0",
     "@types/jsbn": "^1.2.30",
+    "@types/mathjs": "^9.4.2",
+    "@types/node-forge": "^1.3.6",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/socket.io-client": "^3.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
